parser/vanlang_parser.go
// Generated from ./grammar/VanLang.g4 by ANTLR 4.7.

package parser // VanLang
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'var'", "'func'", "'begin'", "'end'", "'if'", "'then'", "'elseif'",
	"'else'", "'return'", "'println'", "'readln'", "'repeat'", "'until'", "'while'",
	"'do'", "'not'", "'and'", "'or'", "'xor'", "'imp'", "'eqv'", "'div'", "'mod'",
	"'bool'", "'int'", "'string'", "'tuple'", "'array'", "'float'", "'unsigned'",
	"'+'", "'-'", "'*'", "'/'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='",
	"", "", "", "", "", "", "", "", "", "'('", "')'", "'['", "']'", "','",
	"';'", "'->'",
}
var symbolicNames = []string{
	"", "VAR", "FUNC", "BEGIN", "END", "IF", "THEN", "ELSEIF", "ELSE", "RETURN",
	"PRINTLN", "READLN", "REPEAT", "UNTIL", "WHILE", "DO", "NOT", "AND", "OR",
	"XOR", "IMP", "EQV", "DIV", "MOD", "BOOL", "INTTYPE", "STRTYPE", "TUPLETYPE",
	"ARRAYTYPE", "FLOAT", "UNSIGNED", "PLUS", "MINUS", "MULTIPLY", "DIVIDE",
	"EQUAL", "NOTEQUAL", "LESS", "GREATER", "LESSEQUAL", "GREATEREQUAL", "AND_OP",
	"OR_OP", "XOR_OP", "EQV_OP", "IMP_OP", "NOT_OP", "ID", "INT", "STRING",
	"LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", "SEMICOLON", "ARROW",
	"WS",
}

var ruleNames = []string{
	"program", "statement", "variableDeclaration", "functionDeclaration", "argumentList",
	"datatype", "logicStatement", "loopStatement", "conditionStatement", "expressionStatement",
	"expression", "term", "factor", "atom",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type VanLangParser struct {
	*antlr.BaseParser
}

func NewVanLangParser(input antlr.TokenStream) *VanLangParser {
	this := new(VanLangParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "VanLang.g4"

	return this
}

// VanLangParser tokens.
const (
	VanLangParserEOF          = antlr.TokenEOF
	VanLangParserVAR          = 1
	VanLangParserFUNC         = 2
	VanLangParserBEGIN        = 3
	VanLangParserEND          = 4
	VanLangParserIF           = 5
	VanLangParserTHEN         = 6
	VanLangParserELSEIF       = 7
	VanLangParserELSE         = 8
	VanLangParserRETURN       = 9
	VanLangParserPRINTLN      = 10
	VanLangParserREADLN       = 11
	VanLangParserREPEAT       = 12
	VanLangParserUNTIL        = 13
	VanLangParserWHILE        = 14
	VanLangParserDO           = 15
	VanLangParserNOT          = 16
	VanLangParserAND          = 17
	VanLangParserOR           = 18
	VanLangParserXOR          = 19
	VanLangParserIMP          = 20
	VanLangParserEQV          = 21
	VanLangParserDIV          = 22
	VanLangParserMOD          = 23
	VanLangParserBOOL         = 24
	VanLangParserINTTYPE      = 25
	VanLangParserSTRTYPE      = 26
	VanLangParserTUPLETYPE    = 27
	VanLangParserARRAYTYPE    = 28
	VanLangParserFLOAT        = 29
	VanLangParserUNSIGNED     = 30
	VanLangParserPLUS         = 31
	VanLangParserMINUS        = 32
	VanLangParserMULTIPLY     = 33
	VanLangParserDIVIDE       = 34
	VanLangParserEQUAL        = 35
	VanLangParserNOTEQUAL     = 36
	VanLangParserLESS         = 37
	VanLangParserGREATER      = 38
	VanLangParserLESSEQUAL    = 39
	VanLangParserGREATEREQUAL = 40
	VanLangParserAND_OP       = 41
	VanLangParserOR_OP        = 42
	VanLangParserXOR_OP       = 43
	VanLangParserEQV_OP       = 44
	VanLangParserIMP_OP       = 45
	VanLangParserNOT_OP       = 46
	VanLangParserID           = 47
	VanLangParserINT          = 48
	VanLangParserSTRING       = 49
	VanLangParserLPAREN       = 50
	VanLangParserRPAREN       = 51
	VanLangParserLBRACK       = 52
	VanLangParserRBRACK       = 53
	VanLangParserCOMMA        = 54
	VanLangParserSEMICOLON    = 55
	VanLangParserARROW        = 56
	VanLangParserWS           = 57
)

// VanLangParser rules.
const (
	VanLangParserRULE_program             = 0
	VanLangParserRULE_statement           = 1
	VanLangParserRULE_variableDeclaration = 2
	VanLangParserRULE_functionDeclaration = 3
	VanLangParserRULE_argumentList        = 4
	VanLangParserRULE_datatype            = 5
	VanLangParserRULE_logicStatement      = 6
	VanLangParserRULE_loopStatement       = 7
	VanLangParserRULE_conditionStatement  = 8
	VanLangParserRULE_expressionStatement = 9
	VanLangParserRULE_expression          = 10
	VanLangParserRULE_term                = 11
	VanLangParserRULE_factor              = 12
	VanLangParserRULE_atom                = 13
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VanLangParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VanLangParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *ProgramContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VanLangVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VanLangParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, VanLangParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(31)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<VanLangParserVAR)|(1<<VanLangParserFUNC)|(1<<VanLangParserIF)|(1<<VanLangParserRETURN)|(1<<VanLangParserPRINTLN)|(1<<VanLangParserREPEAT)|(1<<VanLangParserWHILE))) != 0) || _la == VanLangParserID {
		{
			p.SetState(28)
			p.Statement()
		}

		p.SetState(33)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VanLangParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VanLangParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) VariableDeclaration() IVariableDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariableDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVariableDeclarationContext)
}

func (s *StatementContext) FunctionDeclaration() IFunctionDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunctionDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationContext)
}

func (s *StatementContext) LogicStatement() ILogicStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILogicStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILogicStatementContext)
}

func (s *StatementContext) LoopStatement() ILoopStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILoopStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILoopStatementContext)
}

func (s *StatementContext) ConditionStatement() IConditionStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConditionStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConditionStatementContext)
}

func (s *StatementContext) ExpressionStatement() IExpressionStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionStatementContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VanLangVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VanLangParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, VanLangParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(34)
			p.VariableDeclaration()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(35)
			p.FunctionDeclaration()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(36)
			p.LogicStatement()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(37)
			p.LoopStatement()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(38)
			p.ConditionStatement()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(39)
			p.ExpressionStatement()
		}

	}

	return localctx
}

// IVariableDeclarationContext is an interface to support dynamic dispatch.
type IVariableDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVariableDeclarationContext differentiates from other interfaces.
	IsVariableDeclarationContext()
}

type VariableDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVariableDeclarationContext() *VariableDeclarationContext {
	var p = new(VariableDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VanLangParserRULE_variableDeclaration
	return p
}

func (*VariableDeclarationContext) IsVariableDeclarationContext() {}

func NewVariableDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VariableDeclarationContext {
	var p = new(VariableDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VanLangParserRULE_variableDeclaration

	return p
}

func (s *VariableDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *VariableDeclarationContext) VAR() antlr.TerminalNode {
	return s.GetToken(VanLangParserVAR, 0)
}

func (s *VariableDeclarationContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(VanLangParserID)
}

func (s *VariableDeclarationContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(VanLangParserID, i)
}

func (s *VariableDeclarationContext) AllLBRACK() []antlr.TerminalNode {
	return s.GetTokens(VanLangParserLBRACK)
}

func (s *VariableDeclarationContext) LBRACK(i int) antlr.TerminalNode {
	return s.GetToken(VanLangParserLBRACK, i)
}

func (s *VariableDeclarationContext) AllDatatype() []IDatatypeContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDatatypeContext)(nil)).Elem())
	var tst = make([]IDatatypeContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDatatypeContext)
		}
	}

	return tst
}

func (s *VariableDeclarationContext) Datatype(i int) IDatatypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDatatypeContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDatatypeContext)
}

func (s *VariableDeclarationContext) AllRBRACK() []antlr.TerminalNode {
	return s.GetTokens(VanLangParserRBRACK)
}

func (s *VariableDeclarationContext) RBRACK(i int) antlr.TerminalNode {
	return s.GetToken(VanLangParserRBRACK, i)
}

func (s *VariableDeclarationContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(VanLangParserSEMICOLON, 0)
}

func (s *VariableDeclarationContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(VanLangParserCOMMA)
}

func (s *VariableDeclarationContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(VanLangParserCOMMA, i)
}

func (s *VariableDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VariableDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VariableDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.EnterVariableDeclaration(s)
	}
}

func (s *VariableDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.ExitVariableDeclaration(s)
	}
}

func (s *VariableDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VanLangVisitor:
		return t.VisitVariableDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VanLangParser) VariableDeclaration() (localctx IVariableDeclarationContext) {
	localctx = NewVariableDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, VanLangParserRULE_variableDeclaration)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(VanLangParserVAR)
	}
	{
		p.SetState(43)
		p.Match(VanLangParserID)
	}
	{
		p.SetState(44)
		p.Match(VanLangParserLBRACK)
	}
	{
		p.SetState(45)
		p.Datatype()
	}
	{
		p.SetState(46)
		p.Match(VanLangParserRBRACK)
	}
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == VanLangParserCOMMA {
		{
			p.SetState(47)
			p.Match(VanLangParserCOMMA)
		}
		{
			p.SetState(48)
			p.Match(VanLangParserID)
		}
		{
			p.SetState(49)
			p.Match(VanLangParserLBRACK)
		}
		{
			p.SetState(50)
			p.Datatype()
		}
		{
			p.SetState(51)
			p.Match(VanLangParserRBRACK)
		}

		p.SetState(57)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(58)
		p.Match(VanLangParserSEMICOLON)
	}

	return localctx
}

// IFunctionDeclarationContext is an interface to support dynamic dispatch.
type IFunctionDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFunctionDeclarationContext differentiates from other interfaces.
	IsFunctionDeclarationContext()
}

type FunctionDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunctionDeclarationContext() *FunctionDeclarationContext {
	var p = new(FunctionDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VanLangParserRULE_functionDeclaration
	return p
}

func (*FunctionDeclarationContext) IsFunctionDeclarationContext() {}

func NewFunctionDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunctionDeclarationContext {
	var p = new(FunctionDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VanLangParserRULE_functionDeclaration

	return p
}

func (s *FunctionDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *FunctionDeclarationContext) FUNC() antlr.TerminalNode {
	return s.GetToken(VanLangParserFUNC, 0)
}

func (s *FunctionDeclarationContext) ID() antlr.TerminalNode {
	return s.GetToken(VanLangParserID, 0)
}

func (s *FunctionDeclarationContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(VanLangParserLPAREN, 0)
}

func (s *FunctionDeclarationContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(VanLangParserRPAREN, 0)
}

func (s *FunctionDeclarationContext) ARROW() antlr.TerminalNode {
	return s.GetToken(VanLangParserARROW, 0)
}

func (s *FunctionDeclarationContext) Datatype() IDatatypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDatatypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDatatypeContext)
}

func (s *FunctionDeclarationContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(VanLangParserSEMICOLON, 0)
}

func (s *FunctionDeclarationContext) ArgumentList() IArgumentListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArgumentListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArgumentListContext)
}

func (s *FunctionDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunctionDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunctionDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.EnterFunctionDeclaration(s)
	}
}

func (s *FunctionDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.ExitFunctionDeclaration(s)
	}
}

func (s *FunctionDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VanLangVisitor:
		return t.VisitFunctionDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VanLangParser) FunctionDeclaration() (localctx IFunctionDeclarationContext) {
	localctx = NewFunctionDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, VanLangParserRULE_functionDeclaration)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(60)
		p.Match(VanLangParserFUNC)
	}
	{
		p.SetState(61)
		p.Match(VanLangParserID)
	}
	{
		p.SetState(62)
		p.Match(VanLangParserLPAREN)
	}
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == VanLangParserID {
		{
			p.SetState(63)
			p.ArgumentList()
		}

	}
	{
		p.SetState(66)
		p.Match(VanLangParserRPAREN)
	}
	{
		p.SetState(67)
		p.Match(VanLangParserARROW)
	}
	{
		p.SetState(68)
		p.Datatype()
	}
	{
		p.SetState(69)
		p.Match(VanLangParserSEMICOLON)
	}

	return localctx
}

// IArgumentListContext is an interface to support dynamic dispatch.
type IArgumentListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsArgumentListContext differentiates from other interfaces.
	IsArgumentListContext()
}

type ArgumentListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArgumentListContext() *ArgumentListContext {
	var p = new(ArgumentListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VanLangParserRULE_argumentList
	return p
}

func (*ArgumentListContext) IsArgumentListContext() {}

func NewArgumentListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArgumentListContext {
	var p = new(ArgumentListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VanLangParserRULE_argumentList

	return p
}

func (s *ArgumentListContext) GetParser() antlr.Parser { return s.parser }

func (s *ArgumentListContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(VanLangParserID)
}

func (s *ArgumentListContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(VanLangParserID, i)
}

func (s *ArgumentListContext) AllLBRACK() []antlr.TerminalNode {
	return s.GetTokens(VanLangParserLBRACK)
}

func (s *ArgumentListContext) LBRACK(i int) antlr.TerminalNode {
	return s.GetToken(VanLangParserLBRACK, i)
}

func (s *ArgumentListContext) AllDatatype() []IDatatypeContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDatatypeContext)(nil)).Elem())
	var tst = make([]IDatatypeContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDatatypeContext)
		}
	}

	return tst
}

func (s *ArgumentListContext) Datatype(i int) IDatatypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDatatypeContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDatatypeContext)
}

func (s *ArgumentListContext) AllRBRACK() []antlr.TerminalNode {
	return s.GetTokens(VanLangParserRBRACK)
}

func (s *ArgumentListContext) RBRACK(i int) antlr.TerminalNode {
	return s.GetToken(VanLangParserRBRACK, i)
}

func (s *ArgumentListContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(VanLangParserCOMMA)
}

func (s *ArgumentListContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(VanLangParserCOMMA, i)
}

func (s *ArgumentListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ArgumentListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ArgumentListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.EnterArgumentList(s)
	}
}

func (s *ArgumentListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VanLangListener); ok {
		listenerT.ExitArgumentList(s)
	}
}

func (s *ArgumentListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VanLangVisitor:
		return t.VisitArgumentList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VanLangParser) ArgumentList() (localctx IArgumentListContext) {
	localctx = NewArgumentListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, VanLangParserRULE_argumentList)
	var _la int

	defer func() {
		p.ExitRule()
	}()
